--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,9 +38,15 @@ header {
 }
 
 .hour {
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
   color: #000000;
   border-top: 1px dashed #000000;
+}
+
+input {
+background: transparent;
+color: black;
+
 }
 
 .past {
