--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ header {
 }
 
 .hour {
-  /* background-color: #ffffff; */
+  background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
 }
